[exams] Unify add/edit template; check date ranges; other small fixes

--- a/modules-available/exams/lang/de/messages.json
+++ b/modules-available/exams/lang/de/messages.json
@@ -1,9 +1,12 @@
 {
     "changes-successfully-saved": "\u00c4nderungen erfolgreich gespeichert",
+    "end-before-start": "Endzeitpunkt liegt vor Startzeitpunkt!",
+    "endtime-invalid": "Ung\u00fcltige Endzeit: {{0}}",
     "error-while-saving-changes": "Fehler beim Speichern der \u00c4nderungen",
     "exam-added-success": "Klausurzeitraum erfolgreich hinzugef\u00fcgt",
     "exam-deleted-success": "Klausurzeitraum erfolgreich gel\u00f6scht",
     "exam-not-added": "Klausurzeitraum konnte nicht hinzugef\u00fcgt werden",
     "exam-not-deleted-error": "Klausurzeitraum konnte nicht gel\u00f6scht werden",
-    "invalid-exam-id": "Ung\u00fcltige Klausur-ID: {{0}}"
+    "invalid-exam-id": "Ung\u00fcltige Klausur-ID: {{0}}",
+    "starttime-invalid": "Ung\u00fcltige Startzeit: {{0}}"
 }
