--- a/modules-available/exams/lang/de/template-tags.json
+++ b/modules-available/exams/lang/de/template-tags.json
@@ -13,7 +13,5 @@
     "lang_end_time": "Uhrzeit",
     "lang_id": "ID",
     "lang_location": "Raum\/Ort",
-    "lang_locations": "R\u00e4ume\/Orte",
-    "lang_pleaseSelectLocation": "Bitte w\u00e4hlen Sie mindestens einen Raum\/Ort",
-    "lang_saveExam": "Klausurzeitraum speichern"
+    "lang_locations": "R\u00e4ume\/Orte"
 }
