fixed i18n and updated l10n

--- a/modules-available/news/lang/de/messages.json
+++ b/modules-available/news/lang/de/messages.json
@@ -1,6 +1,7 @@
 {
+    "help-save-success": "Hilfe erfolgreich aktualisiert",
     "invalid-action": "Ung\u00fcltige Aktion: {{0}}",
-    "news-save-success": "News erfolgreich aktualisiert",
+    "news-del-success": "News gel\u00f6scht",
     "news-empty": "Es wurde keine News in der Datenbank gefunden",
-    "news-del-success": "News gel\u00f6scht"
+    "news-save-success": "News erfolgreich aktualisiert"
 }
