--- a/modules-available/news/lang/en/messages.json
+++ b/modules-available/news/lang/en/messages.json
@@ -1,6 +1,7 @@
 {
+    "help-save-success": "Help updated successfully",
     "invalid-action": "Invalid action: {{0}}",
-    "news-save-success": "News updated successfully",
+    "news-del-success": "News deleted",
     "news-empty": "There was no news found in the database",
-    "news-del-success": "News deleted"
+    "news-save-success": "News updated successfully"
 }
