--- a/modules-available/translation/lang/de/template-tags.json
+++ b/modules-available/translation/lang/de/template-tags.json
@@ -5,6 +5,7 @@
     "lang_menuCategories": "Men\u00fckategorien",
     "lang_messages": "Benachrichtigungen",
     "lang_missing": "Fehlend",
+    "lang_missingDeps": "Fehlende Abh\u00e4ngigkeiten",
     "lang_module": "Modul",
     "lang_otherStrings": "Andere Texte",
     "lang_sample": "Beispiel",
