--- a/modules-available/translation/lang/en/template-tags.json
+++ b/modules-available/translation/lang/en/template-tags.json
@@ -5,6 +5,7 @@
     "lang_menuCategories": "Menu categories",
     "lang_messages": "Messages",
     "lang_missing": "Missing",
+    "lang_missingDeps": "Missing dependencies",
     "lang_module": "Module",
     "lang_otherStrings": "Other strings",
     "lang_sample": "Sample",
