--- a/modules-available/baseconfig/lang/de/messages.json
+++ b/modules-available/baseconfig/lang/de/messages.json
@@ -1,3 +1,5 @@
 {
+    "invalid-hook": "Ung\u00fcltiger Hook: {{0}}",
+    "no-module-hook": "Modul {{0}} hat keinen Hook",
     "settings-updated": "Einstellungen wurden aktualisiert"
 }
