--- a/modules-available/serversetup-bwlp/lang/en/messages.json
+++ b/modules-available/serversetup-bwlp/lang/en/messages.json
@@ -1,4 +1,5 @@
 {
     "image-not-found": "USB image not found. Try regenerating the boot menu first.",
-    "invalid-ip": "No interface is configured with the address {{0}}"
+    "invalid-ip": "No interface is configured with the address {{0}}",
+    "no-ip-addr-set": "Please set the server's primary IP address"
 }
