--- a/modules-available/exams/lang/de/template-tags.json
+++ b/modules-available/exams/lang/de/template-tags.json
@@ -1,17 +1,27 @@
 {
     "lang_actions": "Aktionen",
-    "lang_addExam": "Klausurzeitraum hinzuf\u00fcgen",
-    "lang_allExamPeriods": "Alle Klausurzeitr\u00e4ume",
+    "lang_addExam": "Zeitraum hinzuf\u00fcgen",
+    "lang_addingBasedOnLecture": "F\u00fcge neuen Pr\u00fcfungszeitraum basierend auf vorhandener Veranstaltung an",
+    "lang_allExamPeriods": "Alle Pr\u00fcfungszeitr\u00e4ume",
     "lang_begin": "Beginn",
     "lang_begin_date": "Beginn Datum",
     "lang_begin_time": "Uhrzeit",
     "lang_deleteConfirmation": "Wirklich l\u00f6schen?",
     "lang_description": "Beschreibung",
-    "lang_editExam": "Klausurzeitraum bearbeiten",
+    "lang_duration": "Dauer",
+    "lang_editExam": "Zeitraum bearbeiten",
     "lang_end": "Ende",
     "lang_end_date": "Ende Datum",
     "lang_end_time": "Uhrzeit",
+    "lang_examModeDescription": "Hier k\u00f6nnen Sie bwLehrpool-R\u00e4ume zeitgesteuert in den Pr\u00fcfungsmodus versetzen. Im Pr\u00fcfungsmodus ist das Client-System st\u00e4rker abgeriegelt, sodass es sich zum Schreiben von E-Pr\u00fcfungen eignet. Nach dem Ein- bzw. Ausschalten des Pr\u00fcfungsmodus ist es notwendig, die Rechner in den betroffenen R\u00e4umen neuzustarten.",
+    "lang_global": "Global",
+    "lang_headingAllExamLectures": "Liste ausstehender Pr\u00fcfungsveranstaltungen",
+    "lang_headingGraphicalOverview": "Grafische Darstellung",
+    "lang_headingMain": "bwLehrpool Pr\u00fcfungsmodus",
     "lang_id": "ID",
+    "lang_lectureName": "Veranstaltungsname",
     "lang_location": "Raum\/Ort",
-    "lang_locations": "R\u00e4ume\/Orte"
+    "lang_locations": "R\u00e4ume\/Orte",
+    "lang_noDescription": "Keine Beschreibung",
+    "lang_timeFrame": "Zeitraum"
 }
