--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -21,8 +21,11 @@
     "lang_kvmState": "Status",
     "lang_kvmStats": "64\u2009Bit Gast-Support",
     "lang_kvmSupport": "64\u2009Bit G\u00e4ste",
+    "lang_labelFilter": "Aktive Filter (UND-Logik)",
     "lang_lastBoot": "Letzter Boot",
+    "lang_lastLogin": "Letzer Login",
     "lang_lastSeen": "Zuletzt gesehen",
+    "lang_location": "Ort",
     "lang_logHeadline": "Logging",
     "lang_macAddr": "MAC-Adresse",
     "lang_machine": "Rechner",
