--- a/modules-available/statistics/lang/en/template-tags.json
+++ b/modules-available/statistics/lang/en/template-tags.json
@@ -21,8 +21,11 @@
     "lang_kvmState": "State",
     "lang_kvmStats": "64\u2009Bit guest support",
     "lang_kvmSupport": "64\u2009Bit guests",
+    "lang_labelFilter": "Active filters (AND logic)",
     "lang_lastBoot": "Last boot",
+    "lang_lastLogin": "Last login",
     "lang_lastSeen": "Last seen",
+    "lang_location": "Location",
     "lang_logHeadline": "Logging",
     "lang_macAddr": "MAC address",
     "lang_machine": "Machine",
