--- a/modules-available/sysconfig/lang/en/template-tags.json
+++ b/modules-available/sysconfig/lang/en/template-tags.json
@@ -18,6 +18,7 @@
     "lang_browseForFile": "Browse",
     "lang_checkFileContent": "Here you have the possibility to check the contents of the archive again.",
     "lang_computerLoad": "Load image from local computer",
+    "lang_configLocationLong": "This configuration is directly assigned to one or more location. This counter will not include sub-location that might inherit this configuration.",
     "lang_configuration": "Configuration",
     "lang_configurationActive": "Enable configuration",
     "lang_configurationChoose": "Please select which modules will be used for this configuration.",
@@ -33,6 +34,7 @@
     "lang_download": "Download",
     "lang_downloadLong": "Download module \"as is\".",
     "lang_editLong": "Edit module or configuration.",
+    "lang_editingLocationInfo": "You're setting the configuration for a specific location, not the global one",
     "lang_folderRedirection": "Folder Redirection",
     "lang_generateModule": "Generating module",
     "lang_handlingNotes": "Here you can configure how network shares (like the user's home directory) are mapped inside the VM. Old Versions of bwLehrpool used the VMware Shared Folder technique, which could cause problems with certain file servers. The new \"native mode\" works much better, but on Windows guests, it requires that you (1) use an smb\/cifs file server (Windows Server, Linux with Samba) and (2) have openslx.exe setup to autorun in the VM (this is already configured for bwLehrpool templates). Native mode with fallback is experimental and known to cause temporary freezes with some VMs. Use with care. IMPORTANT: Pick a drive letter for the home directory that will be free in the Virtual Machines. Otherwise, a random letter will be assigned.",
