--- a/modules-available/dozmod/lang/de/template-tags.json
+++ b/modules-available/dozmod/lang/de/template-tags.json
@@ -1,8 +1,15 @@
 {
     "lang_asteriskRequired": "Felder mit (*) sind erforderlich",
     "lang_canLogin": "Nutzer dieser Einrichtung k\u00f6nnen sich am Satelliten anmelden",
+    "lang_defaultImagePermissionAdmin": "Administration",
+    "lang_defaultImagePermissionDownload": "Download",
+    "lang_defaultImagePermissionEdit": "Bearbeiten",
+    "lang_defaultImagePermissionLink": "Verkn\u00fcpfen",
+    "lang_defaultImagePermissions": "Standard-Berechtigungen f\u00fcr Images",
+    "lang_defaultLecturePermissions": "Standard-Berechtigungen f\u00fcr Vorlesungen",
     "lang_delButton": "Gew\u00e4hlte Images endg\u00fcltig l\u00f6schen",
     "lang_description": "Diese Liste zeigt Images, die entweder abgelaufen sind, oder deren Datei besch\u00e4digt, verschoben oder gel\u00f6scht wurde. Diese Images sind zur Zeit im Lehrpool nicht verf\u00fcgbar, ihre endg\u00fcltige L\u00f6schung muss aber manuell best\u00e4tigt werden, um gr\u00f6\u00dfere Katastrophen durch Softwarefehler, verstellte Systemuhren etc. zu vermeiden.",
+    "lang_descriptionRuntimeConfig": "Blah blah blah",
     "lang_email": "EMail",
     "lang_emailNotifications": "EMail-Benachrichtigungen aktiviert",
     "lang_hasNewer": "Neuere Version existiert",
@@ -10,9 +17,14 @@
     "lang_host": "Host",
     "lang_image": "VM",
     "lang_lastLogin": "Letzte Anmeldung",
+    "lang_lecturePermissionAdmin": "Administration",
+    "lang_lecturePermissionEdit": "Bearbeiten",
     "lang_mailConfig": "SMTP-Konfiguration zum Versenden von Mails",
     "lang_mailConfigHeadline": "EMail-Konfiguration",
     "lang_mailDescription": "F\u00fcllen Sie die folgenden Felder aus, wenn sie m\u00f6chten, dass Dozenten Benachrichtigungen per Mail bekommen, falls eine von ihnen genutzte oder erstellte VM oder Veranstaltung abl\u00e4uft. Um diese Funktion zu deaktivieren, lassen Sie eines der mit (*) gekennzeichneten Felder leer. Wenn das hier angegebene E-Mail-Konto nur zum Versenden von Mails genutzt wird, sollten Sie einen Auto-Responder einrichten f\u00fcr den Fall, dass ein Dozent auf eine der automatisch generierten Mails antwortet (bzw. eine explizit angegebene Reply-To Adresse ignoriert).",
+    "lang_maxImageValidity": "Maximale G\u00fcltigkeit",
+    "lang_maxLectureVisibility": "Maximale Sichtbarkeit",
+    "lang_maxTransfers": "Maximale Anzahl an Uploads",
     "lang_organization": "Einrichtung",
     "lang_organizationList": "Liste der Einrichtungen",
     "lang_organizationListHeader": "Nutzungsrechte f\u00fcr den Satelliten festlegen",
@@ -20,6 +32,9 @@
     "lang_password": "Passwort",
     "lang_port": "Port",
     "lang_replyTo": "Reply-To Adresse (z.B. Helpdesk)",
+    "lang_runtimeConfig": "Laufzeit-Konfiguration",
+    "lang_runtimeConfigHeadline": "Laufzeit-Konfiguration",
+    "lang_runtimeConfigLimits": "Beschr\u00e4nkungen",
     "lang_senderAddress": "Absenderadresse",
     "lang_senderName": "Absender Anzeigename",
     "lang_size": "Gr\u00f6\u00dfe",
