[statistics] Tweak layout, ellipsis in table without ruining layout (super awesome solution)

--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -9,7 +9,9 @@
     "lang_cpuModel": "CPU",
     "lang_details": "Details",
     "lang_devices": "Ger\u00e4te",
+    "lang_duration": "Dauer",
     "lang_event": "Ereignis",
+    "lang_eventType": "Typ",
     "lang_firstSeen": "Erste Aktivit\u00e4t",
     "lang_gbRam": "RAM",
     "lang_hardwareSummary": "Hardware",
@@ -57,7 +59,6 @@
     "lang_ramSlots": "Speicher-Slots",
     "lang_realCores": "Kerne",
     "lang_reallocatedSectors": "Defekte Sektoren",
-    "lang_refresh": "Ansicht aktualisieren",
     "lang_serialNo": "Serien-Nr",
     "lang_showList": "Liste",
     "lang_showVisualization": "Visualisierung",
