--- a/modules-available/statistics/lang/en/template-tags.json
+++ b/modules-available/statistics/lang/en/template-tags.json
@@ -9,7 +9,9 @@
     "lang_cpuModel": "CPU",
     "lang_details": "Details",
     "lang_devices": "Devices",
+    "lang_duration": "Duration",
     "lang_event": "Event",
+    "lang_eventType": "Type",
     "lang_firstSeen": "First seen",
     "lang_gbRam": "RAM",
     "lang_hardwareSummary": "Hardware",
@@ -57,8 +59,9 @@
     "lang_ramSlots": "Memory slots",
     "lang_realCores": "Cores",
     "lang_reallocatedSectors": "Bad sectors",
-    "lang_refresh": "Refresh",
     "lang_serialNo": "Serial no",
+    "lang_showList": "Show list",
+    "lang_showVisualization": "Show visualization",
     "lang_sockets": "Sockets",
     "lang_tempPart": "Temp. partition",
     "lang_tempPartStats": "Temporary partition",
