--- a/modules-available/dozmod/lang/de/template-tags.json
+++ b/modules-available/dozmod/lang/de/template-tags.json
@@ -8,8 +8,9 @@
     "lang_defaultImagePermissions": "Standard-Berechtigungen f\u00fcr Images",
     "lang_defaultLecturePermissions": "Standard-Berechtigungen f\u00fcr Vorlesungen",
     "lang_delButton": "Gew\u00e4hlte Images endg\u00fcltig l\u00f6schen",
-    "lang_description": "Diese Liste zeigt Images, die entweder abgelaufen sind, oder deren Datei besch\u00e4digt, verschoben oder gel\u00f6scht wurde. Diese Images sind zur Zeit im Lehrpool nicht verf\u00fcgbar, ihre endg\u00fcltige L\u00f6schung muss aber manuell best\u00e4tigt werden, um gr\u00f6\u00dfere Katastrophen durch Softwarefehler, verstellte Systemuhren etc. zu vermeiden.",
+    "lang_description": "Beschreibung",
     "lang_descriptionRuntimeConfig": "Blah blah blah",
+    "lang_description_delete_images": "Diese Liste zeigt Images, die entweder abgelaufen sind, oder deren Datei besch\u00e4digt, verschoben oder gel\u00f6scht wurde. Diese Images sind zur Zeit im Lehrpool nicht verf\u00fcgbar, ihre endg\u00fcltige L\u00f6schung muss aber manuell best\u00e4tigt werden, um gr\u00f6\u00dfere Katastrophen durch Softwarefehler, verstellte Systemuhren etc. zu vermeiden.",
     "lang_email": "EMail",
     "lang_emailNotifications": "EMail-Benachrichtigungen aktiviert",
     "lang_hasNewer": "Neuere Version existiert",
