--- a/modules-available/locations/lang/de/template-tags.json
+++ b/modules-available/locations/lang/de/template-tags.json
@@ -7,6 +7,7 @@
     "lang_deleteLocation": "Ort l\u00f6schen",
     "lang_deleteSubnet": "Bereich l\u00f6schen",
     "lang_editConfigVariables": "Konfig.-Variablen",
+    "lang_editRoomplan": "Raumplan bearbeiten",
     "lang_endAddress": "Endadresse",
     "lang_listOfSubnets": "Liste der Subnetze",
     "lang_location": "Ort",
