--- a/modules-available/locations/lang/en/template-tags.json
+++ b/modules-available/locations/lang/en/template-tags.json
@@ -7,6 +7,7 @@
     "lang_deleteLocation": "Delete location",
     "lang_deleteSubnet": "Delete range",
     "lang_editConfigVariables": "Config vars",
+    "lang_editRoomplan": "edit roomplan",
     "lang_endAddress": "End address",
     "lang_listOfSubnets": "List of subnets",
     "lang_location": "Ort",
