--- a/modules-available/dozmod/lang/de/messages.json
+++ b/modules-available/dozmod/lang/de/messages.json
@@ -1,5 +1,11 @@
 {
+    "all-templates-reset": "Alle Templates wurden zur\u00fcckgesetzt",
     "delete-images": "L\u00f6schung: {{0}}",
+    "dozmod-error": "Fehler bei der Kommunikation mit dem bwLehrpool-Suite server: {{0}}",
     "images-pending-delete-exist": "Zur L\u00f6schung markierte Abbilder: {{0}}",
-    "mail-config-saved": "Mail-Konfiguration gespeichert"
+    "mail-config-saved": "Mail-Konfiguration gespeichert",
+    "nothing-submitted": "Es wurde nichts \u00fcbermittelt",
+    "runtimelimits-config-saved": "Einstellungen gespeichert",
+    "templates-saved": "Templates wurden gespeichert",
+    "timeout": "Zeit\u00fcberschreitung"
 }
