--- a/modules-available/main/lang/en/messages.json
+++ b/modules-available/main/lang/en/messages.json
@@ -3,6 +3,7 @@
     "empty-field": "A field was not filled",
     "error-read": "Error reading {{0}}",
     "error-write": "Failed to write {{0}}",
+    "invalid-action": "Invalid action '{{0}}'",
     "module-missing-deps": "Module {{0}} has missing dependencies",
     "no-permission": "No sufficient privileges to access this page",
     "no-such-module": "Modul {{0}} existiert nicht",
